tests/error/polar_invalid_ph.gw
// [contains] polar value #2
 %(0, NULL);
